# proton-xd

./: .gitignore  Cargo.toml  LICENSE  README.md  bindings.json  build.ts  compile.ts  deno.jsonc  index.html  info.json  main.ts  main_debug.ts  mod.ts  png.json  server_debug.ts  todo.md  todo.txt  xd.json
bindings/: bindings.prototype.json  bindings.prototype.ts  bindings.ts  encoder.generated.js  graphics-xd.generated.js
deno/: bindings.ts  fltk.ts  gui.ts  lib.ts
deno_bindgen/: README.md  build.ts  cli.ts  codegen.ts  deno.json  deno.jsonc
image/: Cargo.toml  build.ts  deno.json  mod.ts  rs_lib.d.ts  rs_lib.js  rs_lib_bg.wasm  rs_lib_bg.wasm.d.ts
image/lib/: rs_lib.d.ts  rs_lib.generated.js  rs_lib.js  rs_lib_bg.wasm  rs_lib_bg.wasm.d.ts
image/rs_lib/: Cargo.toml
image/rs_lib/src/: color_type.rs  converter.rs  img.rs  impls.rs  lib.rs  screenshot.rs  ser.rs  thread.rs  writer.rs
image/rs_lib/src/convert/: mod.rs
image/rs_lib/src/ser/: exception.rs  format.rs  img.rs  impls.rs  mod.rs  res.rs
lib/: bindings.ts  color.ts  default.ts  lib.ts  mod.ts  module.ts  rgba.ts  screencapture.ts  xd.ts
lib/graphics/: color.ts  screencapture.ts
lib/mod/: mod.ts
lib/rust/: clone.ts  drop.ts  error_handle.ts  iter.ts  mod.ts  option.ts  panic.ts  result.ts
lib/rust/collections/: List.ts  hash.cc  hash_map.ts  hash_set.ts  iter.ts  linked_list.ts  mod.ts  vector.ts
lib/rust/env/: mod.ts  vars.ts
lib/rust/error/: error.ts  error_handle.ts  mod.ts  panic.ts
lib/rust/ffi/: c_str.ts  mod.ts  str.ts
lib/rust/fs/: directory_builder.ts  file.ts  mod.ts
lib/rust/io/: exception.ts  mod.ts  opt.ts  option.ts  res.ts  result.ts
lib/rust/macros/: assert.ts  mod.ts  panic.ts  url.ts
lib/rust/net/: fetch.ts  mod.ts
lib/rust/path/: mod.ts
lib/rust/thread/: mod.ts  thread.ts
lib/screencapture/: color.ts  image.ts  mod.ts  screencapture.ts
lib/serde/: mod.ts  window_attr.ts
lib/std/: drop.ts  macros.ts  mod.ts  types.ts
lib/std/collections/: iter.ts  iter_trait.ts  mod.ts
lib/std/declarative-macros/: collections.ts  mod.ts  net.ts
lib/std/env/: mod.ts
lib/std/error/: async_exception.ts  exception.ts  mod.ts  (+1 more)
lib/thread/: mod.ts
lib/xd/: _webview.ts  _window.ts  color.ts  default.ts  dialog.ts  encode.ts  image.ts  mod.ts  read_ptr.ts  screenshot.ts  types.ts  webview.ts  win.ts  xd.ts
mod/: collections.ts  env.ts  error.ts  fs.ts  macros.ts  mod.ts  net.ts  panics.ts  std.ts  test.ts  thread.ts  xd.ts
src/: convert.rs  dialog.rs  exception.rs  ffi.rs  lib.rs  lib.rs.txt  screencapture.rs  thread.rs  webview.rs  webview_types.rs  xd.rs
src/dialog/: cfm.rs  dialog.rs  fs.rs  mod.rs  msg.rs
src/thread/: mod.rs
src/xd/: macros.rs  mod.rs  webview.rs  webview_builder.rs  win.rs  window_builder.rs
tests/: cal.ts  dbg.txt  image_test.ts  server.ts  test.ts  xd.rs
xd-macro/: Cargo.toml
xd-macro/src/: lib.rs
xd-macro/src/bindings/: bindings.rs  mod.rs
xd-macro/tests/: main.rs
(+178 files in other folders)
