[package]
name = "xd"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
screenshoter = "0.1.1"
native-dialog = "0.6.4"
image = { version = "0.24.6", features = ["webp-encoder"] }
wry = "0.31.1"
deno_bindgen = "0.8.1"
actix-web = { version = "4.4.0", features = ["secure-cookies","openssl"] }


[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
