[package]
name = "xd"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wry = "0.31.1"
screenshoter = "0.1.1"
xd-macro = { path = "./xd-macro" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.35.0", features = ["full","mio","test-util","tracing","windows-sys"] }
native-dialog = { version = "0.7.0",features = ["once_cell","windows_dpi_awareness","windows_visual_styles"] }
deno_bindgen = "0.8.1"


[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
