[package]
name = "xd-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
deno_bindgen_macro = "0.8.1"
quote = "1.0.33"
syn = { version = "2.0.42", features = ["full","extra-traits"] }
