[package]
name = "xd-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.71"
quote = "1.0.33"
serde = { version = "1.0.193", features = ["serde_derive", "derive"] }
serde_json = "1.0.108"
syn = { version = "2.0.42", features = ["full","extra-traits"] }

[dev-dependencies]
deno_bindgen_macro = "0.8.1"

