[package]
name = "rs_lib"
version = "0.0.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"

[dependencies]
image = { version = "0.24.7", futures = ["webp-encoder"] }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.38"
